@@ -1,3 +1,5 @@
+- Refactor: Upgraded dependency of fenixedu-academic-core (StudentCandidacy not abstract anymore)
+
 6.4.2 (04-02-2020)
 - Improvement: added IDEFE qualitative grades
 
